syntax = "proto3";

option csharp_namespace = "GrpcApi";

service WorkerIntegration {
	rpc GetWorkersStream (GetWorkersStreamRequest) returns (stream WorkerMessage);
	rpc GetWorker(GetWorkerRequest) returns (WorkerMessage);
	rpc RemoveWorkers(RemoveWorkersRequest) returns (stream CrudOperationResponse);
	rpc AddWorkers(stream AddWorkersRequest) returns (stream CrudOperationResponse);
	rpc UpdateWorkers(stream UpdateWorkersRequest) returns (stream CrudOperationResponse);
}

message GetWorkersStreamRequest
{
	//for future use
}

message GetWorkerRequest
{
	int64 Id = 1;
}

message RemoveWorkersRequest
{
	repeated int64 Id = 1;
}

message AddWorkersRequest
{
	WorkerMessage WorkerInfo = 1;
	bool GenerateIdIfExists = 2;
}

message UpdateWorkersRequest
{
	WorkerMessage OldWorkerInfo = 1;
	WorkerMessage NewWorkerInfo = 2;
	bool ForseUpdate = 3;
}

message WorkerMessage
{
	int64 Id = 1;
	string LastName = 2;
	string FirstName = 3;
	string MiddleName = 4;
	int64 Birthday = 5;
	Sex Sex = 6;
	bool HasChildren = 7;
}


enum Sex {
	Male = 0;
	Female = 1;
}

enum CrudStatusCode {
	Success = 0;
	Failed = 1;
	AlreadyExists = 2;
	UpdatedByOther = 3;
}

message CrudOperationResponse
{
	int64 Id = 1;
	CrudStatusCode Result = 2;
	string Message = 3;
}